envoy/envoy.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: route
            virtual_hosts:
            - name: mseauth_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: mseauth_cluster

  clusters:
  - name: mseauth_cluster
    type: STRICT_DNS
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: mseauth_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: mseauth1, port_value: 4000 }
        - endpoint:
            address:
              socket_address: { address: mseauth2, port_value: 4000 }
        - endpoint:
            address:
              socket_address: { address: mseauth3, port_value: 4000 }
